--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,300;10..48,400;10..48,500;10..48,700;10..48,800&display=swap');
+@font-face {
+    font-family: Ahrefs;
+    src: url(Ahrefs.ttf);
+}
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Bricolage Grotesque', sans-serif;
+    font-family: Ahrefs;
 }
 
 html,
@@ -19,14 +22,8 @@ body {
     color: aliceblue;
 }
 
-
-::selection {
-    background-color: aliceblue;
-    color: black;
-}
-
 .container {
-    width: 15%;
+    max-width: 400px;
     height: fit-content;
     border-radius: 10px;
     background-color: whitesmoke;
@@ -78,7 +75,7 @@ body {
 
 /* Container 2 */
 .container2 {
-    width: 15%;
+    max-width: 400px;
     height: fit-content;
     border-radius: 10px;
     background-color: whitesmoke;
@@ -131,10 +128,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 5%;
-    width: 100%;
-    margin-top: 1%;
-    gap: 1%;
+    width: 300px;
+    margin-top: 15px;
+    gap: 15px;
 }
 
 .extraBtn {
@@ -146,7 +142,7 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     font-weight: bold;
-    width: 5%;
+    max-width: 100%;
     border-radius: 5px;
 }
 
